@@ -1460,6 +1460,7 @@ func_all_modules ()
   func_module xsize
   func_module xalloc
   func_module alloca
+  func_module allocsa
   func_end_table
 
   element="Integer arithmetic functions <stdlib.h>"
